2009-06-20  It's me FKtPp ;)  <m_pupil@yahoo.com.cn>
	* files.el (cd): Do not #'split-path on nil #'getenv result; Make
	sure the cd-path value is a list.

2009-06-14  Aidan Kehoe  <kehoea@parhasard.net>

	* help.el (describe-function-1): 
	Check macro-p, not macrop, when describing whether a symbol has an
	associated macro or an associated function. Relevant with
	autoloaded macros. 
	(function-arglist): 
	Accept multi-line arglists in built-in functions, as found in
	#'write-region-internal. #'dontusethis-set-symbol-value-handler
	is still broken for other reasons. 

2009-06-07  Aidan Kehoe  <kehoea@parhasard.net>

	* code-files.el (insert-file-contents): 
        Autodetection may return undecided as a coding system. If the file
	was zero-length, this is kosher, and we should set
	buffer-file-coding-system to its default; if it is not
	zero-length, we still need to set b-f-c-s, but we warn that the
	autodetection fails. (Ignoring that for the user, autodetection
	failing is something very distinct from what we use it to mean
	here.) See
	http://mid.gmane.org/18986.53111.800393.660612@parhasard.net and
	the related thread. 

2009-06-06  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (cd): 
	Make CDPATH handling portable, accept entries without trailing
	slashes within it. Some style corrections from Stephen Turnbull,
	thank you Stephen. 

2009-05-29  Aidan Kehoe  <kehoea@parhasard.net>

	* bytecomp.el (byte-compile-lambda): 
	Even if we are going to store uncompiled interactive forms in the
	compiled-function object, byte compile (and discard) the code, for
	the sake of the warnings generated. 

2009-05-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.29 "garbanzo" is released.

2009-04-01  Stephen J. Turnbull  <stephen@xemacs.org>

	* lisp-mnt.el:  Update FSF address.
	Improve header comment.
	Remove long-obsolete commented code.
	(lm-crack-address, lm-report-bug):
	Add #### remarks calling for use of superior external functions.
	(lm-synopsis):