@@ -1,3 +1,11 @@
+2009-07-11  Aidan Kehoe  <kehoea@parhasard.net>
+
+	* automated/mule-tests.el:
+	Check for Richard Zidlicky's bug of
+	http://mid.gmane.org/20090602194123.GA5163@linux-m68k.org; also
+	check that supplying CODESYS to #'find-file is respected both for
+	nonexistent files and zero-length existing files. 
+
 2009-05-18  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* XEmacs 21.5.29 "garbanzo" is released.
