@@ -1,3 +1,13 @@
+2009-07-11  Aidan Kehoe  <kehoea@parhasard.net>
+
+	* code-files.el (insert-file-contents): 
+	Take advantage of more sensible behaviour from
+	#'insert-file-contents-internal, allowing us to actually follow
+	the documented coding system behaviour for nonexistent files (that
+	is, buffer-file-coding-system reflects coding-system-for-read &c.,
+	not becoming undecided for either zero-length or nonexistent
+	files).
+
 2009-06-20  It's me FKtPp ;)  <m_pupil@yahoo.com.cn>
 	* files.el (cd): Do not #'split-path on nil #'getenv result; Make
 	sure the cd-path value is a list.
